# librarian-mcp

./: Cargo.toml  LICENSE  README.md  STRATEGY.md  dist-workspace.toml
docs/: announcement-draft.md
docs/brainstorms/: 2026-04-11-vault-cache-and-quality-requirements.md  2026-05-27-obsidian-project-command-center-requirements.md  2026-05-28-on-demand-synthesis-pipeline-requirements.md  2026-05-30-judgment-layer-project-decision-state-pages-requirements.md
docs/ideation/: 2026-04-11-open-ideation.md
docs/plans/: 2026-04-11-001-feat-vault-cache-and-quality-plan.md  2026-05-28-001-feat-library-changes-primitive-plan.md  2026-05-30-001-feat-judgment-layer-mvp-plan.md
docs/walkthroughs/: voltron-pilot.md
examples/research-skill-graph/: index.md  research-log.md
examples/research-skill-graph/knowledge/: concepts.md  data-points.md
examples/research-skill-graph/lenses/: contrarian.md  economic.md  first-principles.md  geopolitical.md  historical.md  technical.md
examples/research-skill-graph/methodology/: contradiction-protocol.md  research-frameworks.md  source-evaluation.md  synthesis-rules.md
examples/research-skill-graph/templates/: source-template.md
skill/: SKILL.md
src/: cache.rs  eval.rs  graph.rs  index.rs  main.rs  optimize.rs  report.rs  search.rs  server.rs  setup.rs  tools.rs  viz.rs
src/templates/: graph.html
